--- a/TradingBot.Web/Properties/launchSettings.json
+++ b/TradingBot.Web/Properties/launchSettings.json
@@ -1,9 +1,9 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:52107",
+      "applicationUrl": "http://localhost:2510/",
       "sslPort": 0
     }
   },
@@ -18,10 +18,10 @@
     "TradingBot.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:2511/"
     }
   }
 }
